--- a/.config/sway/config
+++ b/.config/sway/config
@@ -285,16 +285,9 @@ bindsym --locked XF86AudioPlay         exec playerctl play-pause
 bindsym --locked XF86AudioNext         exec playerctl next
 bindsym --locked XF86AudioPrev         exec playerctl previous
 
-
-bindsym Print exec 'grim -g "$(slurp)" ~/Pictures/Screenshots/ps_$(date +"%Y%m%d%H%M%S").png && notify-send "Screenshot captured"'
-#bindsym 2 exec 'grim ~/ps_$(date +"%Y%m%d%H%M%S").png'
-bindsym Shift+Print exec 'grim -g "$(slurp -d)" - | wl-copy; notify-send "Screenshot copied"'
-
-# capture current output
-bindsym Alt+Print exec "grim -o \ $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name')  ~/Pictures/Screenshots/ps_$(date +\"%Y%m%d%H%M%S\").png"
-
-#bindsym 5 exec 'grim -g "$(slurp)" - | swappy -f -'
-
+bindsym Print exec 'grimshot --notify savecopy output'
+bindsym Shift+Print exec 'grimshot --notify savecopy area'
+bindsym Alt+Print exec 'grimshot --notify savecopy window'
 
 bindgesture swipe:right workspace prev
 bindgesture swipe:left workspace next
